Mobile overflow fixing.

--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -1,5 +1,5 @@
 /* mobile menu */
-.mobile-menu-opened-before { overflow: hidden; }
+.mobile-menu-opened-before:not(.mobile) { overflow: hidden; }
 .mobile-menu-opened body { width: 100%; height: 100%; overflow: hidden; position: fixed; top: 0; left: 0; }
 
 .mobile-menu-bg { width: 100%; min-width: 320px; height: 100%; background-color: rgba(0,0,0,.65); position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 89; }
