--- a/css/photo-gallery.css
+++ b/css/photo-gallery.css
@@ -25,7 +25,7 @@ html:not(.mobile) .photo-gallery .img.has-info:hover > span,.photo-gallery .img.
 
 .photo-gallery .img:not(.has-info):after { background-color: rgba(255,255,255,.25); }
 
-.photo-preview-opened { overflow: hidden; }
+.photo-preview-opened:not(.mobile) { overflow: hidden; }
 .mobile.photo-preview-opened body { width: 100%; height: 100%; overflow: hidden; position: fixed; top: 0; left: 0; }
 
 .photo-preview { width: 100%; min-width: 320px; height: 100%; background-color: rgba(0,0,0,.65); padding: 0 10px; position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 91; }
